--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <h1>Welcome to my website</h1>
-        <p>My name is Baha Mustafa </p>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Welcome to my website</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Welcome to my websits</h1>
+        <script>src="script.js"</script>
+    
+    </body>
 </html>
