--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
+
 <html lang="en">
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Welcome to my website</title>
-    </head>
-    <body>
-        <h1>Welcome to my websits</h1>
-        <script>src="script.js"</script>
-    
-    </body>
+
+  <head>
+     <title>Baha Mustafa - Web Developer</title>
+  </head>
+
+  <body>
+
+  <h1 id="my name" >Hi, I'm Baha Mustafa,</h1>
+
+  <h3 id= "title"> and I'm a Software Developer </h3>
+    <img src="./images/Stratford Accounting.png" alt="c">
+  </body>
+
+
 </html>
+
