--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
 
-  <h1 id="my name" >Hi, I'm Baha Mustafa,</h1>
+  <h1>Hi, I'm Baha Mustafa,</h1>
 
   <h3 id= "title"> and I'm a Software Developer </h3>
     <img src="./images/Stratford Accounting.png" alt="c">
