Add Gmail button to main page

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       <div class="button-container">
         <button onclick="openResume()">know more about me</button>
         <button id="projects-btn" onclick="window.location.href='https://github.com/BahaMustafa'">My Github</button>
+        <button id="gmail-btn" onclick="window.location.href='mailto:bhaatobase93@gmail.com'">Email me</button>
       </div>
+
       <div id="resume-text" style="display: none;">
         <button class="close-btn" onclick="closeResume()">X</button>
-        <h1>Hi, I'm Baha Mustafa, a beginner web developer and aspiring software engineer. I'm passionate about coding and love learning new skills and techniques to improve my craft.
-        I started my coding journey on February 27, and since then I've been working on building my skills in HTML, CSS, and JavaScript. I'm always on the lookout for new ways to challenge myself and grow as a developer.
-        Thanks for visiting my website, and feel free to reach out if you have any questions or just want to chat about coding!</h1>
+        <h4>Hi, I'm Baha Mustafa, a beginner web developer and aspiring software engineer. I'm passionate about coding and love learning new skills and techniques to improve my craft.
+          I started my coding journey on February 27, and since then I've been working on building my skills in HTML, CSS, and JavaScript. I'm always on the lookout for new ways to challenge myself and grow as a developer.
+          Thanks for visiting my website, and feel free to reach out if you have any questions or just want to chat about coding!</h4>
       </div>
       <div class="img-container">
         <img src="./images/Stratford Accounting.png" alt="c">
